2006-03-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/GNUmakefile: Install fixes.

	* scripts/GNUmakefile (SEXECUTABLES): Install fix: remove mup2ly.

	* lily/note-head.cc (head::get_balltype): Compile fix.

	* flower/file-name.cc (dos_to_posix): Flower string fix.

2006-03-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/midi2ly.py (Key.dump): pychecker cleanups.

	* python/lilylib.py (underscore): remove identify() , warranty()

	* ps/music-drawing-routines.ps: change Border routine for GSView
	compatibility.

	* lily/stem.cc (height): use quantize-positions.  This triggers
	set_stem_lengths, so scripts on beamed stems are handled correctly.

	* lily/side-position-interface.cc (aligned_side): check if edges
	of script are inside staff. Fixes accent of edge of the staff.

	* input/regression/staccato-pos.ly: more examples.

	* stepmake/aclocal.m4 (depth): fix bashism.

	* lily/lyric-combine-music-iterator.cc: move from
	new-lyric-combine-iterator.cc
	(process): add pending_grace_lyric_ member to delay lyrics on
	grace notes.

	* lily/system-start-text.cc (print): suicide if we don't have any
	elements. Fixes hara kiri'd instrument names.

	* scripts/mup2ly.py (Module): remove.

2006-03-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/global.itely (A single music expression):
	close @lilypond properly

	* lily/volta-bracket.cc (modify_edge_height): change from
	after_line_breaking_callback. Suicide last bracket if appropriate.
 
	* python/lilylib.py: strip getopt support

	* scripts/etf2ly.py (do_options): use optparse

	* scripts/midi2ly.py: optparse, strip lilylib copy. 

	* scripts/abc2ly.py (voices): use optparse.

	* stepmake/stepmake/generic-vars.make: new function absdir.

	* scripts/convert-ly.py (bindir): use optparse, argv[0] relocation.

	* scripts/lilypond-book.py (find_file): use global_options for
	include path

	* scm/ps-to-png.scm (ps-page-count): prevent null characters
	entering C code.
