@@ -1,3 +1,7 @@
+2006-03-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/output-ps.scm (grob-cause): replace backslashes by /
+
 2006-03-02  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* cygwin/GNUmakefile: Install fixes.
@@ -9,6 +13,11 @@
 	* flower/file-name.cc (dos_to_posix): Flower string fix.
 
 2006-03-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* python/lilylib.py: pychecker cleanups.
+
+	* scripts/lilypond-book.py
+	(Lilypond_snippet.output_print_filename): pychecker cleanups
 
 	* scripts/midi2ly.py (Key.dump): pychecker cleanups.
 
